feat(document): 实现文档分块策略工厂和服务